--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="drop-down-overlay close">
           <div class="drop-menu drop-menu-home close">
             <ul class="menu-list">
-              <li class="menu-item"><a href="./home.html">Home</a></li>
+              <li class="menu-item"><a href="./index.html">Home</a></li>
               <li class="menu-item">
                 <a href="./servicepage/service.html">Service</a>
               </li>
@@ -48,7 +48,7 @@
           <div class="navbar">
             <ul class="navbar-list">
               <li class="navbar-item">
-                <a href="./home.html" class="navbar-item__link"
+                <a href="./index.html" class="navbar-item__link"
                   ><img
                     src="./assets/img/logo.png"
                     alt="logo"
