--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="list-scroll-bar">
     <div
       class="container"
-      style="background-image: url(../assets/img/background_0.png)"
+      style="background-image: url(./assets/img/background_0.png)"
     >
       <header class="header">
         <!-- MOBILE TABLET -->
