--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     >
       <header class="header">
         <!-- MOBILE TABLET -->
+        <i class="fa-solid fa-bars barBtn icons"></i>
         <i class="fa-solid fa-moon modeBtn icons"></i>
         <div class="drop-down-overlay close">
           <div class="drop-menu drop-menu-home close">
